--- a/BookBee/src/main/resources/templates/metas.html
+++ b/BookBee/src/main/resources/templates/metas.html
@@ -31,22 +31,24 @@
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
-                    <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span><a href="#">Metas</a></span>
+                    <a href="/BookBee/src/main/resources/templates/metas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/metas.html">Metas</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
-                    <span><a href="#">Favoritos</a></span>
+                    <a href="/BookBee/src/main/resources/templates/favoritos.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/favoritos.html">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
-                    <span><a href="#">Anotações</a></span>
+                    <a href="/BookBee/src/main/resources/templates/notas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/notas.html">Anotações</a></span>
                 </span>
             </button>
     
@@ -114,6 +116,15 @@
                     <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
                  </li>
                   <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                 </li>
+                 <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                 </li>
+                 <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                 </li>
+                 <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
                     <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
                  </li>
             </ul>
