--- a/BookBee/src/main/resources/templates/usuario.html
+++ b/BookBee/src/main/resources/templates/usuario.html
@@ -31,22 +31,24 @@
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
-                    <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span><a href="#">Metas</a></span>
+                    <a href="/BookBee/src/main/resources/templates/metas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/metas.html">Metas</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
-                    <span><a href="#">Favoritos</a></span>
+                    <a href="/BookBee/src/main/resources/templates/favoritos.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/favoritos.html">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
-                    <span><a href="#">Anotações</a></span>
+                    <a href="/BookBee/src/main/resources/templates/notas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/notas.html">Anotações</a></span>
                 </span>
             </button>
     
@@ -78,7 +80,7 @@
         <div class="container-perfil">
             <div class="perfil">
               <button class="perfil-img">
-                <a href="#"><img src="/BookBee/src/main/resources/static/img/perfil.png" alt=""></a>
+                <a href="/BookBee/src/main/resources/templates/confUsuario.html"><img src="/BookBee/src/main/resources/static/img/perfil.png" alt=""></a>
               </button>
               <h3>Olá, Nome do Usuário!</h3>
             </div>
