--- a/BookBee/src/main/resources/templates/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/detalhesdolivro.html
@@ -31,22 +31,24 @@
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
-                    <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span><a href="#">Metas</a></span>
+                    <a href="/BookBee/src/main/resources/templates/metas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/metas.html">Metas</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
-                    <span><a href="#">Favoritos</a></span>
+                    <a href="/BookBee/src/main/resources/templates/favoritos.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/favoritos.html">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
-                    <span><a href="#">Anotações</a></span>
+                    <a href="/BookBee/src/main/resources/templates/notas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/notas.html">Anotações</a></span>
                 </span>
             </button>
     
@@ -100,7 +102,15 @@
                             <li><i class="bi bi-star"></i></li>
                             <li><i class="bi bi-star"></i></li>
                         </ul>
-                    </div>
+                        <!-- <input type="checkbox" id="coracao" />
+                        <label for="coracao">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="44" viewBox="0 0 24 24" fill="none" stroke="#5D2410" >
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                            </svg>
+
+                              
+                        </label> -->
+                    </div> 
                 </div>
             </div>
         </div>
@@ -309,3 +319,6 @@
         <script src="/BookBee/src/main/resources/static/js/modalLista.js"></script>
 
     </main>
+
+    </body>
+    </html>
