--- a/BookBee/src/main/resources/templates/notas.html
+++ b/BookBee/src/main/resources/templates/notas.html
@@ -31,22 +31,24 @@
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
-                    <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span><a href="#">Metas</a></span>
+                    <a href="/BookBee/src/main/resources/templates/metas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/metas.html">Metas</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
-                    <span><a href="#">Favoritos</a></span>
+                    <a href="/BookBee/src/main/resources/templates/favoritos.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/favoritos.html">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
-                    <span><a href="#">Anotações</a></span>
+                    <a href="/BookBee/src/main/resources/templates/notas.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/notas.html">Anotações</a></span>
                 </span>
             </button>
     
@@ -127,8 +129,16 @@
                     <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
                 </div>
             </div>
+
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=L3yzEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Loremipsumdolorsitametconsecteturadipisicingelit.untipsaeosutmagnammolestiaenemomaximempeditnatus,voluptatearchitecto.Sitquosadipiscinonquasatquequod,hicexplaceat?"</p>
+                </div>
+            </div>
         </div>
     
     </main>
-
+    
 </body>
