--- a/BookBee/src/main/resources/templates/erro/error404.html
+++ b/BookBee/src/main/resources/templates/erro/error404.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     <title>Error</title>
 </head>
 <body>
-    
+    <div><p th:if="${erro != null}" th:text="${erro}"></p></div>
 </body>
 
 </html>
