--- a/BookBee/src/main/resources/templates/home.html
+++ b/BookBee/src/main/resources/templates/home.html
@@ -16,40 +16,52 @@
         <div class="logo">
             <img src="/img/logo.png" alt="logo">
         </div>
-        <div class="bemvindo">Seja Bem-Vindo ao</div>
-        
-        <div class="titulo">
-            <p><span class="cor1">Book</span><span class="cor2">Bee</span></p>
+
+        <div class="container-img-mobile">
+            <div class="img-mobile">
+                <img src="/img/homeMobile.png" alt="">
+            </div>
         </div>
-        
-        <div class="text">Bem-vindo ao nosso site de Organização de Leituras, onde simplificamos a gestão da sua biblioteca pessoal, estabeleça metas de leitura, explore novas obras e faça anotações e resenhas. Desfrute da paixão pela leitura com clareza e eficiência.</div>
-        
-        <div class="botoes">    
-            <div class="botaologin">
-            <a href="/login">
-                <button>Login</button>
-            </a>
-        </div>
-        <div class="botaocadastro">
-            <a href="/cadastro">
-                <button>Cadastro</button>
-            </a>
+
+        <div class="container-home">
+            <div class="bemvindo">Seja Bem-Vindo ao</div>
+            <div class="titulo">
+                <p><span class="cor1">Book</span><span class="cor2">Bee</span></p>
+            </div>
+            
+            <div class="text">Bem-vindo ao nosso site de Organização de Leituras, onde simplificamos a gestão da sua biblioteca pessoal, estabeleça metas de leitura, explore novas obras e faça anotações e resenhas. Desfrute da paixão pela leitura com clareza e eficiência.</div>
+            <div class="text-mobile">Desfrute da paixão pela leitura com clareza e eficiência.</div>
+            
+            <div class="botoes">    
+                <div class="botaologin">
+                <a href="/login">
+                    <button>Login</button>
+                </a>
+            </div>
+            <div class="botaocadastro">
+                <a href="/cadastro">
+                    <button>Cadastro</button>
+                </a>
+            </div>
+
+
+
         </div>
         </div>
         
         <div class="container">
             <div class="livro1">
-                <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
+                <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">    
                 <p>Clássicos</p>
             </div>
             
             <div class="livro2">
-            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
+                <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Romances</p>
             </div>
     
            <div class="livro3">
-            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
+            <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Novelas</p>
             </div>
         </div>
